...
        }
        item {
            AddPictureButton(
                modifier = Modifier
                    .height(imageHeight)
                    .width(imageWidth)
                    .testTag("AddImage"),
                onClickAddImage = onClickAddImage,
            )
        }
        item {
            AddPictureButton(
                modifier = Modifier
...
