...
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween
        ) {
            if (isFocused.value) {
                Icon(
                    imageVector = Icons.Filled.Search,
                    contentDescription = "Search Icon",
                    tint = Color.Gray
                )
            }
            BasicTextField(
                value = text,
                onValueChange = {
                    onTextChange(it.filter { c -> c != '\n' }) // singleLine = true doesn't seem to work
                },
                modifier = Modifier
                    .testTag("Search Field")
                    .fillMaxWidth()
                    .padding(horizontal = 8.dp)
                    .onFocusChanged { isFocused.value = it.isFocused },
                singleLine = true,
                textStyle = textStyle,
                cursorBrush = SolidColor(Color.Black),
...
