...
    <string name="filter_button_text">Filter by</string>
    <string name="vote">Vote for other participants</string>
    <string name="see_votes">See results</string>
    <string name="empty_challenge_list">no challenge yet</string>
    <string name="filter_title_filterscreen">Filter by</string>
    <string name="sort_title_filterscreen">Sort by</string>
    <string name="searchbar_placeholder_text">Search…</string>

    <!-- Voting Screen --> voteScreenTitle
    <string name="voteScreenTitle">Vote for best participants</string>
    <string name="voteButton">Vote</string>

    <!-- Ranking Screen -->
...
